--- a/css/resume.css
+++ b/css/resume.css
@@ -5,29 +5,37 @@
 }
 
 .container {
+  width: 100%;
+}
+
+.sub-container {
   margin: 0 auto;
   max-width: 1020px;
+  background-color: white;
 }
 
 .title-banner {
-  padding: 50px;
+  padding: 5%;
+  background-color: #091A26;
 }
 
 .heading-text-container {}
 
 .heading-container {
   display: flex;
-  justify-content: center;
   align-items: center;
+  padding-left: 2.5%;
 }
 
 .resume-heading {
-  font-size: 100px;
+  font-size: 6em;
   font-weight: 700;
-  color: #091A26;
+  color: white;
 }
 
-.headshot-container {}
+.headshot-container {
+  margin: auto;
+}
 
 .headshot-resume {
   float: right;
@@ -54,6 +62,7 @@
 }
 
 .section-text {
+  min-width: 200px;
   color: #091A26;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
@@ -91,14 +100,65 @@
   font-weight: 300;
 }
 
-.footer {
+.button-container {
+  text-decoration: none;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding: 70px;
+}
+
+.button-container a {
+  text-decoration: none;
+}
+
+.resume-button {
+  background-color: #EE455A;
+  color: white;
+  margin: 10px 0px;
+  text-transform: uppercase;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  width: 18vw;
+  font-size: 16px;
+  letter-spacing: 2px;
+  height: 7vh;
+  line-height: 7vh;
+  border-radius: 2px;
+}
+
+.resume-button:hover {
+  background-color: transparent;
+  color: #EE455A;
+}
+
+.resume-button:active {
+  background-color: #EE455A;
+}
+
+.footer-resume {
+  border-top: 1px solid #c0c0c0;
+  padding: 30px 0px;
+}
+
+.footer-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 50px;
 }
 
-.footer a {}
+.footer-resume a {
+  text-decoration: none;
+  color: #091A26;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 23px;
+  letter-spacing: 0.66px;
+}
 
 hr {
   width: 2px;
@@ -155,4 +215,16 @@ hr {
 
 .col-12 {
   width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+  [class*="col-"] {
+    width: 100%;
+  }
+  .section-header-container {
+    background-color: #091A26;
+  }
+  .section-heading {
+    color: white;
+  }
 }
