--- a/css/page-style.css
+++ b/css/page-style.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-  width: 100%;
+  max-width: 100%;
 }
 
 .heading-font {
@@ -40,7 +40,7 @@
 
 .about-text {
   color: #091A26;
-  padding: 95px 40px 40px 40px;
+  padding: 110px 40px 40px 40px;
 }
 
 .about-text-container {}
@@ -48,8 +48,9 @@
 .img-container {}
 
 .headshot {
+  display: flex;
   border-radius: 50%;
-  width: 50%;
+  max-width: 50%;
   overflow: auto;
   margin: 50px 0 60px 185px;
 }
@@ -67,22 +68,52 @@
   opacity: 0.06;
 }
 
-.nav-icon {
+.side-bar {
   position: fixed;
-  z-index: 2;
+  z-index: 1;
+  background-color: transparent;
+  height: 8%;
+}
+
+.project-img-container {
+  overflow: hidden;
+}
+
+.project-img {
+  width: 100%;
+  height: 40%;
+  padding: 5%;
+}
+
+.nav-icon {
+  position: absolute;
+  width: 50px;
+  height: 28px;
+  margin: 40px;
   right: 0;
-  padding: 40px;
   color: #627077;
   cursor: pointer;
 }
 
-.menu-overlay {
-  position: absolute;
-  z-index: 1;
-  right: 0;
+.menu {
   display: none;
-  width: 30%;
+  position: fixed;
+  right: 0;
+  z-index: 1;
+  width: 100%;
   height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.menu-overlay {
+  position: fixed;
+  right: 0;
+  width: 0%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
   background-color: rgb(238, 69, 90);
 }
 
@@ -94,14 +125,14 @@
 }
 
 .menu-items {
-  position: absolute;
+  /*  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);*/
 }
 
 .menu-overlay li a {
-  color: #FFF;
+  color: white;
   text-decoration: none;
   margin: 0px 30px;
   padding: 10px 10px;
@@ -115,7 +146,7 @@
   width: 0%;
   height: 2px;
   content: '';
-  background: #FFF;
+  background-color: white;
   transition: all 0.3s;
   left: 0px;
   bottom: 0px;
@@ -334,9 +365,6 @@
     padding: 0;
     margin: 0;
   }
-  body {
-    padding: 10px;
-  }
   .row {
     display: block;
     padding: 20px;
@@ -349,7 +377,7 @@
     padding: 30px 0px;
   }
   .work-description {
-    padding: 10px 0px;
+    padding: 0px 0px 15px 0px;
     font-size: 16px;
     line-height: 28px;
   }
@@ -357,6 +385,12 @@
     padding-top: 20px;
     font-size: 18px;
     line-height: 24px;
+  }
+  .work02 {
+    padding-top: 50px;
+  }
+  .work-container {
+    padding-bottom: 30%;
   }
   .work-place {
     font-size: 16px;
@@ -367,11 +401,6 @@
   }
   .container {
     width: 100%;
-  }
-  .img-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
   .hello {
     display: none;
@@ -384,13 +413,33 @@
     line-height: 35px;
   }
   .headshot {
-    border-radius: 0;
-    width: 100%;
-    height: auto;
     margin: 0 auto;
+    border-radius: 50%;
+    width: 50%;
+  }
+  .number {
+    display: none;
+  }
+  .side-bar {
+    display: flex;
+    justify-content: space-between;
+  }
+  .side-bar.on-blue {
+    background-color: #091A26;
+    color: white;
+    transition: background-color 0.3s ease-in;
+  }
+  .nav-icon {
+    padding: 0;
+    width: 30px;
+    height: 30px;
+    margin: 20px 20px 0px 0px;
+  }
+  .menu-items a {
+    font-size: 18px;
   }
   .about-text {
-    padding: 40px;
+    padding: 20px;
   }
   .title-container {
     width: auto;
@@ -407,7 +456,6 @@
     font-size: 40px;
   }
   .contact-page {
-    height: 100%;
     display: flex;
     flex-wrap: wrap;
   }
@@ -417,17 +465,16 @@
     padding: 40px;
   }
   .contact {
-    padding: 20px;
-    font-size: 30px;
+    padding: 20px 0px;
+    font-size: 40px;
   }
   .links {
     padding: 0px 5px;
   }
   .links a {
-    font-size: 16px;
+    font-size: 14px;
     padding: 0px;
     margin: 0 3vw 30px;
-    display: inline-block;
   }
   br {
     display: none;
