--- a/css/page-style.css
+++ b/css/page-style.css
@@ -4,8 +4,12 @@
   box-sizing: border-box;
 }
 
-.container {
+.index-container {
+  background-color: white;
+  margin-bottom: 200px;
   max-width: 100%;
+  overflow: hidden;
+  z-index: 99;
 }
 
 .heading-font {
@@ -72,7 +76,7 @@
   position: fixed;
   z-index: 1;
   background-color: transparent;
-  height: 8%;
+  height: 9%;
 }
 
 .project-img-container {
@@ -244,19 +248,50 @@
   font-weight: 600;
 }
 
-.links {
-  display: -webkit-flex;
+.site-footer {
+  width: 100%;
+  position: fixed;
+  z-index: -99;
+  bottom: 0;
+  color: #627077;
+  font-size: 0.75em;
+  font-family: 'Montserrat', sans-serif;
+  padding: 10px 20px;
+  letter-spacing: 1px;
+  background-color: #091A26;
+}
+
+.made-by-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.link-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.links {
+  padding: 80px 0px;
+}
+
+.dash {
+  color: #627077;
 }
 
 .links a {
   font-weight: 300;
-  font-size: 20px;
+  font-size: 18px;
+  padding: 40px 20px;
   font-family: 'Montserrat', sans-serif;
-  padding: 80px 20px;
   color: #EE455A;
   text-decoration: none;
+}
+
+.links a:hover {
+  font-weight: bold;
 }
 
 
@@ -268,43 +303,42 @@
   color: #EE455A;
 }*/
 
+.send-button {
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.svg-container {
+  width: 40px;
+  height: 40px;
+}
+
 .button {
-  margin: 80px 20px;
-  width: 9vw;
-  height: 5vh;
-  border-radius: 90px;
-  text-align: center;
-  line-height: 5vh;
-  font-size: 16px;
-  font-weight: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*margin: 80px 20px;*/
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
   cursor: pointer;
-  background-color: white;
-  border: 1px solid #EE455A;
-  color: #EE455A;
+  background-color: #EE455A;
+  fill: white;
   transition: background-color 0.3s ease-in-out;
   user-select: none;
 }
 
 .button:hover {
-  background-color: #EE455A;
-  color: white;
+  fill: #EE455A;
+  background-color: white;
+  border: 1px solid #EE455A;
 }
 
 .button:active {
   background-color: white;
   color: #EE455A;
-}
-
-.page-footer-container {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-  color: #627077;
-  font-size: 0.75em;
-  font-family: 'Montserrat', sans-serif;
-  padding: 10px 20px;
-  letter-spacing: 1px;
 }
 
 .row {
@@ -427,12 +461,11 @@
   .side-bar.on-blue {
     background-color: #091A26;
     color: white;
-    transition: background-color 0.3s ease-in;
   }
   .nav-icon {
     padding: 0;
-    width: 30px;
-    height: 30px;
+    width: 48px;
+    height: 45px;
     margin: 20px 20px 0px 0px;
   }
   .menu-items a {
