--- a/css/style.css
+++ b/css/style.css
@@ -166,12 +166,16 @@ body {
   /* border: 11px solid red; */
 }
 .customrow{
-  display: flex;
+  /* float:left; */
   /* border: 4px solid blue; */
   overflow: hidden;
 
 }
-.col-sm-4{
+.customrow{
+  /* float: left; */
+  
+}
+.col-md-4{
   /* border: 4px solid red; */
   padding: 0;
 }
