--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Karla', sans-serif;
-
 }
 
 .container-fluid {
@@ -67,8 +66,8 @@ body {
 
 
 .logo{
-  width: 50px;
-  height: 30px;
+  width: 5em;
+  /* height: 50px; */
   text-transform: lowercase;
   font-family: 'Rock Salt', cursive;
   /* border: 1px solid red; */
@@ -105,8 +104,6 @@ body {
 .items > a:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
-
-
 
 .name {
   font-size: 4em;
@@ -155,33 +152,32 @@ body {
 .portfolio, .about {
   padding: 0px 0px 100px 0px;
   background-color: white;
+  /* border: 1px solid blue; */
 
 }
 
 .portfolio-item {
   position: relative;
   cursor: pointer;
-  margin: 15px;
+  /* width: 10%; */
+  min-height:100%;
+  height: 250px;
+}
 
-  /* border: 11px solid red; */
-}
-.customrow{
-  /* float:left; */
-  /* border: 4px solid blue; */
-  overflow: hidden;
 
+.portfolio-item:hover .mask {
+  opacity: 1;
 }
-.customrow{
-  /* float: left; */
-  
-}
+
 .col-md-4{
-  /* border: 4px solid red; */
   padding: 0;
+  /* border: 4px solid red; */
 }
+
 .image {
-  display: block;
-  position: relative;
+  /* position: relative;
+   */
+  /* border: 4px solid red; */
 }
 .filter{
   position: absolute;
@@ -208,10 +204,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.portfolio-item:hover .mask {
-  opacity: 1;
 }
 
 .text {
@@ -341,15 +333,14 @@ font-weight: 100;
   color: #1a0146;
   border: 3px solid #11cbdf;
   background-color: #11cbdf;
-  /* text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2); */
   transition: all 0.3s ease-in-out;
-  border-radius: 3px;
+  border-radius: 2px;
+  margin-top: 2%;
 }
 
 .btn-default:hover {
   cursor: pointer;
   user-select: none;
-  
   color: #1a0146;
   background-color: transparent;
   border: 3px solid #11cbdf;
@@ -363,7 +354,8 @@ font-weight: 100;
 .about {
   background-color: #fff ;
   /* background-image: url("bg.jpg"); */
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   /* background-position: center;
   background-repeat: no-repeat;
   background-size: cover; */
@@ -548,26 +540,19 @@ line-height: 21px;
 .handmade{
   font-size: 1.2em;
 }
-@media screen and (max-width: 1024px) {
-  /* body {
-    padding-bottom: 70vh;
-  }
-  footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    min-height: 40vh;
-    z-index: -1;
-  } */
 
-.right{
-  padding: 0;
-  border: none;
+.tools{
+  padding-bottom: 1%; 
+
 }
-.left{
-  padding: 0;
-  border: none;
-}
+@media screen and (max-width: 1024px) {
+  .right{
+    padding: 0;
+    border: none;
+  }
+  .left{
+    padding: 0;
+    border: none;
+  }
 
 }
