--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,6 @@ body {
   cursor: pointer;
   /* width: 10%; */
   min-height:100%;
-  height: 250px;
 }
 
 
@@ -541,9 +540,16 @@ line-height: 21px;
   font-size: 1.2em;
 }
 
+.handmade > span {
+  cursor: pointer;
+  text-decoration: underline;
+}
+.handmade > span > a{
+  color: #333;
+  /* text-decoration: none; */
+}
 .tools{
   padding-bottom: 1%; 
-
 }
 @media screen and (max-width: 1024px) {
   .right{
