--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   min-height: 100vh;
   padding: 0;
   margin: 0;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
 }
 
 .container-fluid {
@@ -22,7 +22,7 @@ body {
 }
 
 .home {
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   width: 100%;
   min-height: 100vh;
   height: 100vh;
@@ -30,13 +30,11 @@ body {
   background-image: url("bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;  
-  /* #1a0146; */
- 
+  background-size: cover;
 }
 .overlay {
   width: 100%;
-  background:  rgba(26, 1, 70, 0.8);
+  background: rgba(26, 1, 70, 0.8);
   overflow: hidden;
   height: 100%;
   z-index: 2;
@@ -48,7 +46,7 @@ body {
 
 .nav-bar {
   color: white;
-  background-color:transparent;
+  background-color: transparent;
   padding: 20px 0;
   text-transform: uppercase;
   font-size: 0.9em;
@@ -58,27 +56,21 @@ body {
   /* display: flex;
   align-items:center; */
   z-index: 5;
-  
-}
-.nav-content {
-  /* border: 1px dotted white; */
 }
 
-
-.logo{
+.logo {
   width: 5em;
   /* height: 50px; */
   text-transform: lowercase;
-  font-family: 'Rock Salt', cursive;
+  font-family: "Rock Salt", cursive;
   /* border: 1px solid red; */
 }
-.nav-down{
+.nav-down {
   position: fixed;
-  top:0vh;
+  top: 0vh;
   height: 8vh;
-
 }
-.nav-up{
+.nav-up {
   top: -8vh;
 }
 
@@ -112,12 +104,17 @@ body {
   color: #fff;
   letter-spacing: 3px;
 }
+.name::selection {
+  background-color: #11cbdf;
+}
+
 .intro-row {
   height: auto;
   padding: 0% 6%;
 }
-.muted-text{
-  color: #00C8DD;
+
+.muted-text {
+  color: #00c8dd;
 }
 .hello {
   font-size: 3em;
@@ -128,57 +125,69 @@ body {
   /* background-color: #11cbdf; */
 }
 
+.muted-text::selection {
+  background-color: #333;
+}
+
 .introtext {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1.6em;
   font-weight: 200;
   letter-spacing: 1px;
   /* color: #11cbdf; */
-
 }
 
+.introtext::selection {
+  background-color: #11cbdf;
+}
 
 .title {
   font-size: 3em;
   font-weight: 900;
   letter-spacing: 3px;
   text-transform: uppercase;
-  color: #333  ;
+  color: #333;
   margin-bottom: 35px;
   padding: 100px 0px 0px 0px;
-
 }
 
-.portfolio, .about {
+.title::selection {
+  background-color: #11cbdf;
+}
+
+.portfolio,
+.about {
   padding: 0px 0px 100px 0px;
   background-color: white;
   /* border: 1px solid blue; */
-
 }
 
 .portfolio-item {
   position: relative;
   cursor: pointer;
   /* width: 10%; */
-  min-height:100%;
+  min-height: 100%;
 }
-
 
 .portfolio-item:hover .mask {
   opacity: 1;
 }
 
-.col-md-4{
-  padding: 0;
-  /* border: 4px solid red; */
+.image {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
 }
 
-.image {
-  /* position: relative;
-   */
-  /* border: 4px solid red; */
+.the-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 30px;
+  max-width: 960px;
+  margin: 0 auto 30px;
 }
-.filter{
+
+.filter {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -187,13 +196,13 @@ body {
   height: 100%;
   width: 100%;
   z-index: 2;
-  background-color:rgba(23, 22, 22,0.8);
+  background-color: rgba(0, 0, 0,0.1);
 }
 .mask {
   position: absolute;
   top: 0;
   bottom: 0;
-  left:0;
+  left: 0;
   right: 0;
   height: 100%;
   width: 100%;
@@ -216,16 +225,15 @@ body {
 .heading {
   font-size: 1.4em;
   font-weight: 600;
-  margin-bottom:1%;
+  margin-bottom: 1%;
   letter-spacing: 1px;
   text-transform: uppercase;
-
 }
 
 .desc {
   line-height: 21px;
   font-size: 1.2em;
-  color: #7A9CF4;
+  color: #7a9cf4;
   font-weight: 200;
 }
 .modal-dialog {
@@ -245,12 +253,12 @@ body {
   color: #333;
   border-radius: 0;
   margin: 0;
-  line-height: 3rem ;
+  line-height: 3rem;
 }
 
 .modal-title {
   /* color: #3b3a3a; */
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   font-size: 2em;
   text-transform: uppercase;
   text-align: center;
@@ -260,10 +268,9 @@ body {
 
 .img-container {
   background-color: #ff1676;
-  box-shadow: -10px 17px 70px 0 rgba(0,0,0,.4);
+  box-shadow: -10px 17px 70px 0 rgba(0, 0, 0, 0.4);
   margin: 2% 10%;
 }
-
 
 .close {
   padding: 0;
@@ -281,7 +288,7 @@ body {
   /* border: 1px solid red; */
 }
 .modal-text {
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   font-size: 1.3em;
   /* border: 1px solid blue; */
   font-weight: 300;
@@ -292,9 +299,9 @@ body {
   padding-top: 5%;
   padding-left: 5%;
   /* letter-spacing: 1px; */
-font-size: 1.4em;
-font-weight: 100;
-/* line-height: 21px; */
+  font-size: 1.4em;
+  font-weight: 100;
+  /* line-height: 21px; */
 }
 
 .modal.fade .modal-dialog {
@@ -351,7 +358,7 @@ font-weight: 100;
 }
 
 .about {
-  background-color: #fff ;
+  background-color: #fff;
   /* background-image: url("bg.jpg"); */
   min-height: 100vh;
   height: auto;
@@ -360,15 +367,14 @@ font-weight: 100;
   background-size: cover; */
   color: #333;
   padding: 0 18%;
- 
 }
-.content{
+.content {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.headshot-row{
+.headshot-row {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -376,45 +382,38 @@ font-weight: 100;
   /* border: 1px solid red; */
 }
 
-.headshot-box{
+.headshot-box {
   width: 180px;
   height: 180px;
   border-radius: 50%;
   /* border: 1px solid red; */
   margin-bottom: 1%;
-
 }
 
-.headshot{
+.headshot {
   width: 100%;
   border-radius: 100%;
   overflow: hidden;
 }
 
-.headshot img{
+.headshot img {
   display: block;
   width: 100%;
 }
-.about-txt {
-  padding: 100px 0px 0px 0px;
-  color: #333;
-}
 
-
-.left{
-  padding-right: 10%; 
+.left {
+  padding-right: 10%;
   border-right: 1px solid rgba(51, 51, 51, 0.2);
-
 }
-.right{
-  padding-left:10%;
+.right {
+  padding-left: 10%;
 }
-.info-box{
+.info-box {
   margin-top: 10%;
 }
 
-.info-title{
-  font-weight:900;
+.info-title {
+  font-weight: 900;
   text-transform: uppercase;
   font-size: 1em;
   opacity: 0.4;
@@ -423,36 +422,30 @@ font-weight: 100;
   position: relative;
 }
 
-.info-title:after{
-content:"";
-display: block;
-width: 8%;
-height: 3px;
-background: #333;
-opacity: 0.4;
-position: absolute;
-left:0;
-top: 50%;
-
+.info-title:after {
+  content: "";
+  display: block;
+  width: 8%;
+  height: 3px;
+  background: #333;
+  opacity: 0.4;
+  position: absolute;
+  left: 0;
+  top: 50%;
 }
 
-.info-desc{
-  letter-spacing: 1px;
-font-size: 1em;
-font-weight: 400;
-line-height: 21px;
+.info-desc {
+  letter-spacing: 0.3px;
+  font-size: 1em;
+  font-weight: 400;
+  line-height: 21px;
 }
 
-.chart {
-  padding: 6%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  fill: #7697ee;
+.info-title::selection {
+  background-color: #11cbdf;
 }
-
-.chart > svg > g > rect {
-  fill: #7697ee;
+.info-desc::selection {
+  background-color: #11cbdf;
 }
 
 .main-content {
@@ -461,28 +454,30 @@ line-height: 21px;
 }
 
 .contacts {
-  font-family: 'Lato', sans-serif;
-
-  background-color:#fff;
+  font-family: "Lato", sans-serif;
+  background-color: #fff;
   min-height: 50vh;
   /* padding: 0 18%; */
   padding-bottom: 40px;
   /* color: #333; */
   background-color: #151515;
-
 }
 
 .sayhello {
-  color: #8e8e8e ;
+  color: #8e8e8e;
   padding-top: 14%;
   font-size: 4em;
   font-weight: 300;
   /* border: 2px dotted black; */
 }
+.sayhello::selection {
+  background-color: #11cbdf;
+  color: #151515;
+}
 
 .contact-text {
   /* font-family: 'Lato', sans-serif; */
-  color: #8e8e8e ;
+  color: #8e8e8e;
   /* letter-spacing: 0.2px; */
   font-size: 1.4em;
   font-weight: 200;
@@ -490,20 +485,27 @@ line-height: 21px;
   margin-bottom: 4%;
   margin-top: 1%;
 }
-.emailid{
+
+.contact-text::selection {
+  background-color: #11cbdf;
+  color: #151515;
+}
+.emailid {
   /* letter-spacing: 2px; */
-  color: #7A9CF4;
+  color: #7a9cf4;
   font-size: 1.2em;
   /* margin-top: 2%; */
   font-weight: 200;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
-
 }
-.emailid:hover{
+.emailid:hover {
   text-decoration: none;
-
   color: #fff;
+}
+.emailid::selection {
+  background-color: #7a9cf4;
+  color: #11cbdf;
 }
 
 .icons {
@@ -513,7 +515,6 @@ line-height: 21px;
   /* border: 3px dotted orange; */
   /* margin: 22.5px ; */
 }
-
 
 .icon-item {
   width: 30px;
@@ -526,39 +527,45 @@ line-height: 21px;
 .icon-item > svg {
   fill: #7f7f7f;
   transition: all 0.3s ease-in-out;
-
 }
-.icon-item > svg:hover{
+.icon-item > svg:hover {
   fill: #ffffff;
 }
 
-.footer{
+.footer {
   margin-bottom: 0;
   background-color: #151515;
 }
-.handmade{
+.handmade {
   font-size: 1.2em;
 }
 
 .handmade > span {
   cursor: pointer;
-  text-decoration: underline;
 }
-.handmade > span > a{
+.handmade > span > a {
   color: #333;
   /* text-decoration: none; */
 }
-.tools{
-  padding-bottom: 1%; 
+.handmade > span > a:hover {
+  text-decoration: none;
+}
+.tools {
+  padding-bottom: 1%;
 }
 @media screen and (max-width: 1024px) {
-  .right{
+  .right {
     padding: 0;
     border: none;
   }
-  .left{
+  .left {
     padding: 0;
     border: none;
   }
-
+  .name {
+    /* font-size: 1em; */
+  }
+  .info-box {
+    padding-bottom: 6%;
+  }
 }
