--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ body {
 
 .portfolio,
 .about {
-  padding: 0px 0px 100px 0px;
+  padding: 0px 0px 10% 0px;
   background-color: white;
   /* border: 1px solid blue; */
 }
@@ -255,9 +255,10 @@ body {
 .modal-subtitle {
   font-family: "Karla", sans-serif;
   margin: 0;
+  color: #555;
   margin-top: 1em;
   margin-bottom: 0.2em;
-  opacity: 0.6;
+  /* opacity: 0.6; */
   font-size: 1.2em;
   /* border: 1px solid red; */
 }
@@ -346,7 +347,8 @@ body {
   background-color: #fff;
   height: auto;
   color: #333;
-  padding: 0 18%;
+  padding: 0% 18% 6% 18%;
+
 }
 
 .content {
@@ -456,6 +458,11 @@ body {
 .link {
   color: #7a9cf4;
 }
+.link:hover{
+  text-decoration: none;
+  color: #555;
+}
+
 .contact-text {
   color: #8e8e8e;
   font-size: 1.2em;
