--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,8 @@ body {
   /* border: 1px solid red; */
 
 }
+
+
 .modal-dialog {
   width: 100%;
   margin: 0;
@@ -212,6 +214,7 @@ body {
 .modal-header {
   border: 0;
 }
+
 .modal-content {
   min-height: 100vh;
   height: auto;
@@ -220,6 +223,9 @@ body {
   border-radius: 0;
   margin: 0;
   line-height: 2.2rem;
+}
+#myVideo {
+  width: 100%;
 }
 
 .modal-title {
@@ -231,14 +237,24 @@ body {
   padding: 2em 0px 0px 0px;
 }
 
-#myVideo {
-  width: 100%;
+.laptop-wrapper {
+    position: relative;
+    padding-top: 25px;
+    padding-bottom: 67.5%;
+    height: 0;
 }
-.video-container {
-  /* margin-top: 1%;  */
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.laptop-wrapper iframe {
+    background: url(https://i.stack.imgur.com/zZNgk.png) center center no-repeat;
+    background-size: contain;
+    padding: 11.9% 15.5% 14.8%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.modal-footer{
+  padding-bottom: 4%;
 }
 
 .close {
